fix(frontend): fix scrollbar of notification menu

--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -205,3 +205,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+/* Hide scrollbar */
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
